feat: add Fast finality guide

--- a/docs/validators/manage/emergency-exit.mdx
+++ b/docs/validators/manage/emergency-exit.mdx
@@ -1,6 +1,6 @@
 ---
 title: Request an emergency exit
-sidebar_label: Emergency exit
+sidebar_label: Take emergency exit
 description: Request an emergency exit if your node is compromised.
 slug: '/validators/emergency-exit'
 ---
