--- a/docs/validators/manage/maintenance.mdx
+++ b/docs/validators/manage/maintenance.mdx
@@ -1,5 +1,5 @@
 ---
-title: Plan a maintenance period
+title: Schedule maintenance period
 description: Schedule a maintenance period for your validator node.
 ---
 
