--- a/docs/validators/rewards/claim.mdx
+++ b/docs/validators/rewards/claim.mdx
@@ -1,22 +1,21 @@
 ---
-label: Claim rewards
 description: Claim staking reward.
+title: Claim rewards
 ---
 
 import stepOne from './assets/claim-step-1.png';
 import stepTwo from './assets/claim-step-2.png';
 import confirmTransaction from './assets/confirm-transaction.png';
 
-# Claim rewards
-This page describes how to claim your staking reward
-and keep track of the commission and bridge reward.
+## Overview
 
-:::info
+This page describes how to claim your staking reward
+and keep track of the commission and fast finality reward.
 For information about rewards for validators, see
 [Rewards](./../../basics/rewards.md).
-:::
 
 ## Staking reward
+
 Staking reward is calculated each period (approximately one day)
 and displayed as “claimable rewards”. 
 You need to claim this reward manually.
@@ -33,8 +32,9 @@ You need to claim this reward manually.
 
 After the transaction is confirmed, the reward is credited to your wallet.
 
-## Commission and bridge reward
-You don't need to claim commission and bridge reward
+## Commission and fast finality reward
+
+You don't need to claim commission and fast finality reward
 because they are transferred to you automatically
 in the end of each period (approximately one day). 
 
