--- a/docs/validators/slashing/bailout.mdx
+++ b/docs/validators/slashing/bailout.mdx
@@ -1,12 +1,14 @@
 ---
 description: Use credit score to bail out of jail.
+title: Bailout
 ---
 
 import creditScore from './assets/credit-score.png';
 import stepOne from './assets/validator-tier-2.png';
 import stepTwo from './assets/confirm-bailout.png';
 
-# Bailout
+## Overview
+
 If you're in [tier 2 validator slashing](slashing.mdx#tier-2-validator-slashing), you can bail out
 of jail at any time using your credit score.
   
@@ -18,6 +20,7 @@ if they miss no block. The validator loses 1 credit for every missed block.
 * It takes 2 credits to bail out for each epoch.
 
 ## Check your credit score
+
 1. Go to [Validator Dashboard](https://validator.roninchain.com/) >
 **My Staking**.
 2. Find your credit score under **CREDIT SCORE**, next to your total
@@ -25,6 +28,7 @@ self-stake amount.
 <img src={creditScore} width={1280} />
 
 ## Use credit score to bail out
+
 1. Go to [Validator Dashboard](https://validator.roninchain.com/) >
 **My Staking**.
 
