--- a/docs/delegators/stake/stake.mdx
+++ b/docs/delegators/stake/stake.mdx
@@ -22,9 +22,9 @@ import withdrawCountdown from './assets/withdraw-countdown.png'
 
 This page demonstrates how to increase, move, or withdraw your existing stake.
 
-:::info
-Looking to stake your RON? [Become a delegator first](./../onboarding/become-delegator.mdx).
-:::
+## Before you start
+
+Before managing your stake, you need to [become a delegator](./../onboarding/become-delegator.mdx).
 
 ## Stake more
 
