feat: move pages around for bridge decoupling

--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -16,11 +16,10 @@ General overview of Ronin and its basic concepts.
     findSidebarItem('/docs/basics/white-paper'),
     findSidebarItem('/docs/basics/tokenomics'),
     findSidebarItem('/docs/basics/rewards'),
-    findSidebarItem('/docs/basics/dapps'),
-    findSidebarItem('/docs/basics/roles'),
+    findSidebarItem('/docs/basics/nodes'),
     ]} />
 
-## Stake and delegate
+## Stake RON
 
 Use your RON tokens, purchase more RON, 
 delegate your stake and transfer it between validators.
@@ -35,7 +34,7 @@ delegate your stake and transfer it between validators.
     findSidebarItem('/docs/delegators/faq'),
     ]} />
 
-## Join as a validator
+## Run a validator node
 
 Become a validator, change commission,
 claim rewards, manage stake, and maintain the validator's profile.
@@ -59,10 +58,9 @@ and a bridge operator node.
 Start with the introduction guides, and continue from there:
 
 <DocCardList items={[
-    findSidebarItem('/docs/node-operators/introduction'),
-    findSidebarItem('/docs/node-operators/setup/introduction'),
-    findSidebarItem('/docs/node-operators/mainnet'),
-    findSidebarItem('/docs/node-operators/testnet'),
+    findSidebarItem('/docs/validators/setup/overview'),
+    findSidebarItem('/docs/validators/setup/mainnet'),
+    findSidebarItem('/docs/validators/setup/testnet'),
     ]} />
 
 ## Build on Ronin
