--- a/docs/validators/onboarding/become-validator.mdx
+++ b/docs/validators/onboarding/become-validator.mdx
@@ -1,6 +1,6 @@
 ---
 description: Register as a Validator Candidate.
-title: Become a validator
+title: Register as a validator
 ---
 
 import becomeValidator from './assets/become-validator.png';
