--- a/docs/validators/slashing/slashing.mdx
+++ b/docs/validators/slashing/slashing.mdx
@@ -15,8 +15,7 @@ import relayingSlash from './assets/relaying-slash.png';
 Slashing is a mechanism that governs the behavior of validators on
 the Ronin blockchain.
 
-Each validator is responsible for [running](./../../node-operators/introduction) two nodes: a validator node
-and a bridge operator node. Validators are required to keep the nodes
+Each validator is required to keep the node
 online and up to date with the network, and to produce the correct
 block when it comes to their turn.
 
