--- a/docs/validators/slashing/slashing.mdx
+++ b/docs/validators/slashing/slashing.mdx
@@ -1,7 +1,7 @@
 ---
 description: Slashing rules for validators and bridge operators.
 slug: overview
-title: Slashing rules
+title: Slashing for validators
 ---
 
 import doubleSign from './assets/double-sign.png';
