feat: remove /docs from URL

--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -11,15 +11,15 @@ import {findSidebarItem} from '@site/src/sidebarUtils';
 General overview of Ronin and its basic concepts.
 
 <DocCardList items={[ 
-    findSidebarItem('/docs/basics/introduction'),
-    findSidebarItem('/docs/basics/key-concepts'),
-    findSidebarItem('/docs/basics/white-paper'),
-    findSidebarItem('/docs/basics/tokenomics'),
-    findSidebarItem('/docs/basics/nodes'),
-    findSidebarItem('/docs/basics/rewards'),
-    findSidebarItem('/docs/basics/audits'),
-    findSidebarItem('/docs/basics/roles'),
-    findSidebarItem('/docs/basics/dapps'),
+    findSidebarItem('/basics/introduction'),
+    findSidebarItem('/basics/key-concepts'),
+    findSidebarItem('/basics/white-paper'),
+    findSidebarItem('/basics/tokenomics'),
+    findSidebarItem('/basics/nodes'),
+    findSidebarItem('/basics/rewards'),
+    findSidebarItem('/basics/audits'),
+    findSidebarItem('/basics/roles'),
+    findSidebarItem('/basics/dapps'),
     ]} />
 
 ## Stake RON
@@ -28,13 +28,13 @@ Use your RON tokens, purchase more RON,
 delegate your stake and transfer it between validators.
 
 <DocCardList items={[ 
-    findSidebarItem('/docs/delegators/manage/buy-ron'),
-    findSidebarItem('/docs/delegators/onboarding/become-delegator'),
-    findSidebarItem('/docs/delegators/manage/increase-withdraw-stake'),
-    findSidebarItem('/docs/delegators/manage/claim-rewards'),
-    findSidebarItem('/docs/delegators/manage/view-activity'),
-    findSidebarItem('/docs/delegators/manage/track-validators'),
-    findSidebarItem('/docs/delegators/delegator-faq'),
+    findSidebarItem('/delegators/manage/buy-ron'),
+    findSidebarItem('/delegators/onboarding/become-delegator'),
+    findSidebarItem('/delegators/manage/increase-withdraw-stake'),
+    findSidebarItem('/delegators/manage/claim-rewards'),
+    findSidebarItem('/delegators/manage/view-activity'),
+    findSidebarItem('/delegators/manage/track-validators'),
+    findSidebarItem('/delegators/delegator-faq'),
     ]} />
 
 ## Run a validator node
@@ -42,12 +42,12 @@ delegate your stake and transfer it between validators.
 Run a validator node, register as a validator, claim rewards, and manage your validator account.
 
 <DocCardList items={[
-    findSidebarItem('/docs/validators/setup/overview'),
-    findSidebarItem('/docs/validators/onboarding/become-validator'),
-    findSidebarItem('/docs/validators/manage'),
-    findSidebarItem('/docs/validators/governance/overview'),
-    findSidebarItem('/docs/validators/slashing'),
-    findSidebarItem('/docs/validators/validator-faq'),
+    findSidebarItem('/validators/setup/overview'),
+    findSidebarItem('/validators/onboarding/become-validator'),
+    findSidebarItem('/validators/manage'),
+    findSidebarItem('/validators/governance/overview'),
+    findSidebarItem('/validators/slashing'),
+    findSidebarItem('/validators/validator-faq'),
     ]} />
 
 ## Run a bridge operator node
@@ -55,9 +55,9 @@ Run a validator node, register as a validator, claim rewards, and manage your va
 Run a bridge operator node, propose and vote on changes to the bridge.
 
 <DocCardList items={[
-    findSidebarItem('/docs/bridge-operators/setup/overview'),
-    findSidebarItem('/docs/bridge-operators/governance/overview'),
-    findSidebarItem('/docs/bridge-operators/slashing'),
+    findSidebarItem('/bridge-operators/setup/overview'),
+    findSidebarItem('/bridge-operators/governance/overview'),
+    findSidebarItem('/bridge-operators/slashing'),
     ]} />
 
 ## Build on Ronin
