--- a/docs/validators/index.mdx
+++ b/docs/validators/index.mdx
@@ -12,56 +12,56 @@ import {findSidebarItem} from '@site/src/sidebarUtils';
 ### Ronin mainnet
 
 <DocCardList items={[
-    findSidebarItem('/docs/validators/setup/mainnet/run-validator'),
-    findSidebarItem('/docs/validators/setup/mainnet/run-combined'),
-    findSidebarItem('/docs/validators/setup/mainnet/run-non-validator'),
-    findSidebarItem('/docs/validators/setup/mainnet/run-archive'),
+    findSidebarItem('/validators/setup/mainnet/run-validator'),
+    findSidebarItem('/validators/setup/mainnet/run-combined'),
+    findSidebarItem('/validators/setup/mainnet/run-non-validator'),
+    findSidebarItem('/validators/setup/mainnet/run-archive'),
     ]} />
 
 ### Saigon testnet
 
 <DocCardList items={[
-    findSidebarItem('/docs/validators/setup/testnet/run-combined'),
-    findSidebarItem('/docs/validators/setup/testnet/run-non-validator'),
-    findSidebarItem('/docs/validators/setup/testnet/run-archive'),
+    findSidebarItem('/validators/setup/testnet/run-combined'),
+    findSidebarItem('/validators/setup/testnet/run-non-validator'),
+    findSidebarItem('/validators/setup/testnet/run-archive'),
     ]} />
 
 ## Register as a validator
 
 <DocCardList items={[
-    findSidebarItem('/docs/validators/onboarding/become-validator'),
+    findSidebarItem('/validators/onboarding/become-validator'),
     ]} />
 
 ## Manage your validator account
 
 <DocCardList items={[
-    findSidebarItem('/docs/validators/manage/add-finality-vote-key'),
-    findSidebarItem('/docs/validators/manage/change-commission'),
-    findSidebarItem('/docs/validators/manage/claim-rewards'),
-    findSidebarItem('/docs/validators/manage/increase-withdraw-stake'),
-    findSidebarItem('/docs/validators/manage/renounce-role'),
-    findSidebarItem('/docs/validators/manage/schedule-maintenance'),
-    findSidebarItem('/docs/validators/manage/take-emergency-exit'),
-    findSidebarItem('/docs/validators/manage/view-activity'),
-    findSidebarItem('/docs/validators/manage/view-analytics'),
-    findSidebarItem('/docs/validators/manage/view-profile'),
+    findSidebarItem('/validators/manage/add-finality-vote-key'),
+    findSidebarItem('/validators/manage/change-commission'),
+    findSidebarItem('/validators/manage/claim-rewards'),
+    findSidebarItem('/validators/manage/increase-withdraw-stake'),
+    findSidebarItem('/validators/manage/renounce-role'),
+    findSidebarItem('/validators/manage/schedule-maintenance'),
+    findSidebarItem('/validators/manage/take-emergency-exit'),
+    findSidebarItem('/validators/manage/view-activity'),
+    findSidebarItem('/validators/manage/view-analytics'),
+    findSidebarItem('/validators/manage/view-profile'),
     ]} />
 
 ## Slashing rules
 
 <DocCardList items={[
-    findSidebarItem('/docs/validators/slashing'),
+    findSidebarItem('/validators/slashing'),
     ]} />
 
 ## Governance
 
 <DocCardList items={[
-    findSidebarItem('/docs/validators/governance/create-proposal'),
-    findSidebarItem('/docs/validators/governance/vote-on-proposal'),
+    findSidebarItem('/validators/governance/create-proposal'),
+    findSidebarItem('/validators/governance/vote-on-proposal'),
     ]} />
 
 ## FAQ
 
 <DocCardList items={[
-    findSidebarItem('/docs/validators/validator-faq'),
+    findSidebarItem('/validators/validator-faq'),
     ]} />
