chore: rename Twitter to X

--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -70,7 +70,7 @@ is available on the
 
 Stay informed with the latest Ronin news, events, and programs:
 
-* [Ronin Discord](https://discord.gg/P5GgF7SK)
-* [Ronin Twitter](https://twitter.com/ronin_network)
+* [Discord](https://discord.gg/P5GgF7SK)
+* [X](https://twitter.com/ronin_network)
 
-Sign up to [Ronin's Newsletter](https://roninblockchain.substack.com/).
+Sign up for [Ronin Newsletter](https://blog.roninchain.com).
