--- a/docs/delegators/onboarding/become-delegator.mdx
+++ b/docs/delegators/onboarding/become-delegator.mdx
@@ -44,7 +44,7 @@ you want to delegate to, and then select **Delegate**.
   <img src={validatorDetails} width={1440} />
 
 3. Enter the amount manually or choose **Max** to stake all available RON,
-and then select **Delegate**. Expand the estimated yearly rewards to
+and then select **Delegate**. Expand the estimated annual rewards to
 reveal your estimated monthly and daily earnings.
 <img src={stepThree} width={400} />
 
