--- a/docs/validators/manage/schedule-maintenance.mdx
+++ b/docs/validators/manage/schedule-maintenance.mdx
@@ -18,8 +18,7 @@ your account > **Maintenance mode**.
 <img src={stepOne} width={280} />
 
 2. Specify the maintenance duration in epochs. 
-The valid duration is 3-144 epochs ($\approx30$ minutes to
-$\approx24$ hours), where 1 epoch equals 200 blocks.
+The valid duration is 3-144 epochs (from about 30 minutes to 24 hours), where 1 epoch equals 200 blocks.
 You can choose from the valid start epoch, then decide on the end epoch.
 <img src={stepTwo} width={416} />
 
