feat: move Buy RON under Basics

--- a/docs/delegators/index.mdx
+++ b/docs/delegators/index.mdx
@@ -5,6 +5,12 @@ title: Delegators
 import DocCardList from '@theme/DocCardList'; 
 import {findSidebarItem} from '@site/src/sidebarUtils';
 
+## Buy RON
+
+<DocCardList items={[
+    findSidebarItem('/basics/buy-ron'),
+    ]} />
+
 ## Stake RON
 
 <DocCardList items={[
@@ -14,7 +20,6 @@ import {findSidebarItem} from '@site/src/sidebarUtils';
 ## Manage your delegator account
 
 <DocCardList items={[
-    findSidebarItem('/delegators/manage/buy-ron'),
     findSidebarItem('/delegators/manage/increase-withdraw-stake'),
     findSidebarItem('/delegators/manage/claim-rewards'),
     findSidebarItem('/delegators/manage/track-validators'),
