--- a/docs/delegators/onboarding/become-delegator.mdx
+++ b/docs/delegators/onboarding/become-delegator.mdx
@@ -19,7 +19,7 @@ two formats: [video](#video) and [text](#text).
 
 ## Before you start
 
-[Have RON tokens](./../manage/buy-ron.mdx) in your Ronin Wallet.
+[Have RON tokens](./../../basics/buy-ron.mdx) in your Ronin Wallet.
 
 ## Delegate RON
 ### Video tutorial {#video}
