--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -6,12 +6,13 @@ title: Get started
 import DocCardList from '@theme/DocCardList'; 
 import {findSidebarItem} from '@site/src/sidebarUtils';
 
-## Learn about Ronin
+## Get started with Ronin
 
 General overview of Ronin and its basic concepts.
 
 <DocCardList items={[ 
     findSidebarItem('/basics/introduction'),
+    findSidebarItem('/basics/buy-ron'),
     findSidebarItem('/basics/key-concepts'),
     findSidebarItem('/basics/white-paper'),
     findSidebarItem('/basics/tokenomics'),
@@ -38,7 +39,6 @@ Use your RON tokens, purchase more RON,
 delegate your stake and transfer it between validators.
 
 <DocCardList items={[ 
-    findSidebarItem('/delegators/manage/buy-ron'),
     findSidebarItem('/delegators/onboarding/become-delegator'),
     findSidebarItem('/delegators/manage/increase-withdraw-stake'),
     findSidebarItem('/delegators/manage/claim-rewards'),
