--- a/docs/validators/onboarding/become-validator.mdx
+++ b/docs/validators/onboarding/become-validator.mdx
@@ -33,9 +33,9 @@ Sky Mavis to ensure network security. Governing Validators are
 validators by default, and they account for more than half of the
 total validator set.
 
-## Prerequisites
+## Before you start
 
-Before registering as a Validator Candidate, make sure that you have at least 250,000 RON for the initial stake.
+Before registering as a Validator Candidate, make sure that you have at least 250,000 RON for the initial stake. To acquire RON, see [Buy RON](./../../basics/buy-ron.mdx).
 
 ## Register
 
