chore: bold formatting

--- a/docs/apps/rns/trade.mdx
+++ b/docs/apps/rns/trade.mdx
@@ -85,7 +85,7 @@ To gift an RNS name, simply transfer it to the recipient's Ronin address using a
 
 ### Gift an RNS name via Ronin Gifting Portal
 
-For information about gifting an RNS name via the Ronin Gifting Portal, see the [help article](https://support.roninchain.com/hc/en-us/articles/19451168526107-Ronin-Gifting-Portal).
+For information about gifting an RNS name via the Ronin Gifting Portal, see the [help article](https://support.roninchain.com/hc/en-us/articles/19451168526107-Ronin-Gifting-Portal), the **Send a Gift** section.
 
 ## See also
 
