fix/rns-hotfix-4 (#241)
* feat: add guide for transferring

* feat: add guide for transferring on MM

* feat: rewrite headers for transferring RNS

* feat: add text and screenshots to gifting RNS names

* chore: bold formatting

* chore: rewrite link to Ronin Gifting Portal help article

--- a/docs/apps/rns/trade.mdx
+++ b/docs/apps/rns/trade.mdx
@@ -4,11 +4,15 @@ slug: /apps/rns/trade
 title: Trade RNS names
 ---
 
+import rwTransferRns from './assets/trade/rw-transfer-rns.png';
+import rwTransferRnsNext from './assets/trade/rw-transfer-rns-next.png';
+import rwTransferRnsComplete from './assets/trade/rw-transfer-rns-complete.png';
+
 ## Overview
 
 This guide demonstrates how to trade RNS domains on the Mavis Market marketplace by listing your domain for sale to other users or by making an offer to buy a domain from someone else.
 
-## Sell
+## Sell an RNS name
 
 ### List for sale
 
@@ -34,7 +38,7 @@ When someone makes a few offers on your listing, you can view all of them at onc
 
 ![accept](assets/trade/accept.png)
 
-## Buy
+## Buy an RNS name
 
 ### Make an offer
 
@@ -49,6 +53,39 @@ If you want to purchase an RNS domain registered by someone else, you can make a
 Made an offer, but had second thoughts? You can cancel your offer anytime by clicking **Cancel offer**, then **Confirm cancelling**.
 
 ![cancel](assets/trade/cancel.png)
+
+## Gift an RNS name {#gift-rns}
+
+To gift an RNS name, simply transfer it to the recipient's Ronin address using any of the following platforms: Ronin Wallet, Mavis Market, or the Ronin gifting portal. After the transfer is complete, the gifted RNS name will appear in the recipient's Ronin Wallet under the **Collectibles** tab.
+
+### Transfer an RNS name via Ronin Wallet {#gift-rns-ronin-wallet}
+
+1. Open **Ronin Wallet**, select **Collectibles** (mobile app) or **NFTs** (browser extenstion), and then select **RNS**.
+   
+   <img src={rwTransferRns} width={300} />
+2. Choose the RNS name you want to transfer, and then select **Transfer**.
+   
+   <img src={rwTransferRnsNext} width={300} />
+3. Enter the recipient's address and select **Next**.
+   
+   <img src={rwTransferRnsComplete} width={300} />
+4. Sign the transaction to complete the transfer.
+
+### Gift an RNS name via Mavis Market {#gift-rns-mavis-market}
+
+1. Go to [Mavis Market](https://marketplace.skymavis.com), click your name in the top right-hand corner, and then select **My Profile**.
+   ![mm-gift-rns-start](assets/trade/mm-gift-rns-start.png)
+2. On the **Inventory** tab, choose the RNS NFT you want to give.
+   ![mm-gift-rns-inventory](assets/trade/mm-gift-rns-inventory.png)
+3. Select **Gift**.
+   ![mm-gift-rns-next](assets/trade/mm-gift-rns-next.png)
+4. Enter the recipient's address and click **Gift**.
+   ![mm-gift-rns-complete](assets/trade/mm-gift-rns-complete.png)
+5. Sign the transaction to complete the transfer.
+
+### Gift an RNS name via Ronin Gifting Portal
+
+For information about gifting an RNS name via the Ronin Gifting Portal, refer to the **Send a gift** section in this [help article](https://support.roninchain.com/hc/en-us/articles/19451168526107-Ronin-Gifting-Portal).
 
 ## See also
 
