chore: rewrite meta descriptions

--- a/docs/apps/rns/trade.mdx
+++ b/docs/apps/rns/trade.mdx
@@ -1,5 +1,5 @@
 ---
-description: Buy or sell RNS names on Mavis Market.
+description: Buy, sell, and gift RNS names.
 slug: /apps/rns/trade
 title: Trade RNS names
 ---
