chore: edit Vale config

--- a/docs/validators/manage/take-emergency-exit.mdx
+++ b/docs/validators/manage/take-emergency-exit.mdx
@@ -25,7 +25,7 @@ If you find that your node is compromised, such as when your private keys are st
 
 Based on the Governing Validators' vote on your Emergency Exit proposal, your stake may be refunded as follows:
 
-- If the proposal is approved, your entire self-stake is refunded: 50,000 RON is credited immediately, while the remaining amount is transferred to you the next day (00:00 UTC).
-- If the proposal is not approved or expires, you're refunded the amount equal to your self-stake minus 50,000 RON. The amount is transferred to you after seven working days from the proposal's creation date.
+* If the proposal's approved, your entire self-stake is refunded: 50,000 RON is credited immediately, while the remaining amount is transferred to you the next day (00:00 UTC).
+* If the proposal's not approved or expires, you're refunded the amount equal to your self-stake minus 50,000 RON. The amount is transferred to you after seven working days from the proposal's creation date.
 
-After your emergency exit is complete, you can no longer validate transactions on Ronin and receive rewards. Your status is set to "Renounced".
+After your emergency exit is complete, you can no longer validate transactions on Ronin and receive rewards. Your status is set to "Renounced."
