--- a/docs/basics/buy-ron.mdx
+++ b/docs/basics/buy-ron.mdx
@@ -2,8 +2,9 @@
 title: Buy RON
 description: Buy RON tokens for your delegator account.
 ---
-import purchaseSite from './assets/purchase-site.png'
+
 import katanaSite from './assets/katana-site.png'
+import purchaseSite from './assets/purchase-site.png'
 
 ## Overview
 
@@ -11,60 +12,54 @@ RON is the native token of Ronin, and can be used to pay for gas
 fees and participate in staking. Like other cryptocurrencies, 
 there are multiple ways to acquire RON on Ronin.
 
-## Buy on a centralized exchange
+## Buy through a CEX
 
-Centralized exchanges are businesses that allow you to buy RON
-with traditional currency. After purchasing RON from a centralized
-exchange, you can then send it back to your Ronin Wallet to enjoy
+A centralized exchange (CEX) is a business that allows you to buy RON
+with traditional currency. After purchasing RON from a CEX, you can then send it back to your Ronin Wallet to enjoy
 Ronin dApps. Centralized exchanges can be restricted in certain
-geographical locations.
-
-Applicable fees differ between exchanges.
+geographical locations, and applicable fees differ among exchanges.
 
 Here's a list of exchanges that support RON:
 
 * [OKX](https://www.okx.com/)
-* [Gate.io](https://gate.io/)
-* [CoinEx](https://www.coinex.com/)
-* [MEXC Global](https://www.mexc.com/)
-* [Bitget](https://www.bitget.com/)
-* [Coins.ph](https://coins.ph/)
+* [Crypto.com](https://crypto.com/exchange/trade/spot/RONIN_USD)
+* [Gate.io](https://www.gate.io/trade/RON_USDT)
+* [Bitget](https://www.bitget.com/spot/RONUSDT)
+* [MEXC](https://www.mexc.com/exchange/RON_USDT)
+* [Coins.ph](https://pro.coins.ph/en-ph/trade/RON/PHP/)
 
 :::info
 If you are a centralized exchange looking to list RON,
 [contact us](mailto:hello@roninchain.com).
 :::
 
-## Buy on the Purchase site
+## Buy through On-ramp providers
 
-Buy RON using a credit card, bank transfer, or popular online payment
-methods via the Purchase site. The Purchase site is powered by
-Ramp Network, which is a registered crypto assets business.
-Ramp Network is supported in [150+ countries](https://support.ramp.network/en/articles/433-supported-countries-territories-and-us-states-for-buying-and-selling-crypto).
+Ronin has the following official On-ramp partners
+supporting On-ramp solutions on the Ronin chain:
 
-The Purchase site applies a [Ramp Network fee](https://support.ramp.network/en/articles/10415-what-fees-does-ramp-charge-for-buying-and-selling-crypto#h_229ce448ff)
-to your transaction. The fee varies based on the payment method you choose.
+* [Ramp](https://ramp.network/buy)
+* [OnMeta](https://onmeta.in/buytoken)
 
-The Purchase site can be accessed directly through the Ronin Wallet mobile app.
-To do so, visit the **dApps** tab in your Ronin Wallet,
-and then select **Purchase**. Alternatively, you can access
-the site at [purchase.roninchain.com](https://purchase.roninchain.com/).
+You can purchase RON either in the Ronin Wallet mobile app or in your browser:
+
+* Download Ronin Wallet for [iOS](https://apps.apple.com/us/app/ronin-wallet/id1592675001) or [Android](https://play.google.com/store/apps/details?id=com.skymavis.genesis&hl=en_US&gl=US), then sign in and go to **dApps > Purchase**.
+* Visit [purchase.roninchain.com](http://purchase.roninchain.com/)
 
 <img src={purchaseSite} width={1280} />
 
-## Swap on Katana
+## Buy using Katana DEX
 
-Katana is a decentralized token exchange on Ronin. 
+Katana is the official decentralized exchange (DEX) on Ronin. 
 It allows you to exchange RON for other Ronin tokens using existing
 liquidity pools provided by the community. Katana is powered by smart
 contracts, which means there are fewer geographical restrictions. 
 
-Katana applies a trading fee of
-[0.3%](https://axie-infinity.gitbook.io/katana-docs/swap#token-pairs-and-fee)
-on each swap transaction. 
-
 To use Katana, visit [katana.roninchain.com](https://katana.roninchain.com/).
+
 You will need to [set up a Ronin Wallet](https://axie-infinity.gitbook.io/katana-docs/account-setup)
 before using Katana. 
 
 <img src={katanaSite} width={1280} />
+
+Katana is also the avenue for users to purchase other tokens in the Ronin ecosystem like $AXS, $SLP and numerous other tokens.
