fix: remove KateX syntax

--- a/docs/basics/buy-ron.mdx
+++ b/docs/basics/buy-ron.mdx
@@ -57,9 +57,8 @@ contracts, which means there are fewer geographical restrictions.
 
 To use Katana, visit [katana.roninchain.com](https://katana.roninchain.com/).
 
-You will need to [set up a Ronin Wallet](https://axie-infinity.gitbook.io/katana-docs/account-setup)
-before using Katana. 
+For more information, see [Katana user guide](https://axie-infinity.gitbook.io/katana-docs/swap).
 
 <img src={katanaSite} width={1280} />
 
-Katana is also the avenue for users to purchase other tokens in the Ronin ecosystem like $AXS, $SLP and numerous other tokens.
+Katana is also the avenue for users to purchase other tokens in the Ronin ecosystem like AXS, SLP, and numerous other tokens.
