refactor: rename 'Become delegator' to 'Stake RON'

--- a/docs/delegators/manage/increase-withdraw-stake.mdx
+++ b/docs/delegators/manage/increase-withdraw-stake.mdx
@@ -23,7 +23,7 @@ This page demonstrates how to increase, move, or withdraw your existing stake.
 
 ## Before you start
 
-Before managing your stake, you need to [become a delegator](./../onboarding/become-delegator.mdx).
+Make sure you [staked some RON](./../onboarding/become-delegator.mdx).
 
 ## Stake more
 
