--- a/docs/delegators/onboarding/become-delegator.mdx
+++ b/docs/delegators/onboarding/become-delegator.mdx
@@ -1,6 +1,6 @@
 ---
-description: Delegate your RON tokens to a validator.
-title: Register as a delegator
+description: Stake your RON tokens to a validator to earn staking rewards.
+title: Stake RON
 ---
 
 import myStaking from './assets/my-staking.png';
@@ -13,47 +13,55 @@ import validatorDetails from './assets/validator-details.png';
 
 ## Overview
 
-This guide demonstrates how to delegate your RON stake to a validator
-and how to view all your delegations. The delegation tutorial is provided in
+This guide demonstrates how to stake your RON tokens to a validator
+and how to view all your stakes. Staking is also referred to as "delegation," wherein you delegate your stake of RON to a validator to earn staking rewards. 
+
+The instruction is provided in
 two formats: [video](#video) and [text](#text).
 
 ## Before you start
 
 [Have RON tokens](./../../basics/buy-ron.mdx) in your Ronin Wallet.
 
-## Delegate RON
-### Video tutorial {#video}
+## Stake RON
 
-Learn how to stake your RON with this official Staking Tutorial.
+### Video instruction {#video}
+
+Learn how to stake your RON with this official staking tutorial.
 <div class='embed-container'><iframe src='https://www.youtube.com/embed/rCSA6edBub8' frameborder='0' allowfullscreen></iframe></div>
 
-### Text tutorial {#text}
+### Text instruction {#text}
 
 1. Go to [RON staking](https://app.roninchain.com/staking) >
 **Connect wallet**.
-<img src={stepOne} width={1440} />
+   <img src={stepOne} width={1440} />
 
 2. Switch to the **All validators** tab, then pick a validator
-you want to delegate to, and then select **Delegate**.
-<img src={stepTwo} width={1440} />
+you want to delegate your stake to, and then select **Delegate**.
+   <img src={stepTwo} width={1440} />
 
-  To learn more about a validator before making a decision,
-  open the details page by selecting the validator's name
-  from the list. For more ways to learn about a validator,
-  see [Track validators](./../manage/track-validators.mdx).
-  <img src={validatorDetails} width={1440} />
+   To learn more about a validator before making a decision,
+   open the details page by selecting the validator's name
+   from the list. For more ways to learn about a validator,
+   see [Track validators](./../manage/track-validators.mdx).
+   <img src={validatorDetails} width={1440} />
 
 3. Enter the amount manually or choose **Max** to stake all available RON,
 and then select **Delegate**. Expand the estimated annual rewards to
 reveal your estimated monthly and daily earnings.
-<img src={stepThree} width={400} />
+   <img src={stepThree} width={400} />
 
 4. Confirm the transaction.
-<img src={stepFour} width={400} />
+   <img src={stepFour} width={400} />
 
-## View your delegations
+## View your stake
 
-To view the list of validators that you delegated to,
+To view the list of validators that you staked to,
 go to [RON staking](https://app.roninchain.com/staking) > **My staking**.
 
 <img src={myStaking} width={1440} />
+
+## See also
+
+* [Claim rewards](./../manage/claim-rewards.mdx)
+* [Increase, move, or remove your stake](./../manage/increase-withdraw-stake.mdx)
