feat: change stats URL in testnet guides

--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -1,14 +1,15 @@
 ---
 description: Your starting point in this documentation.
-title: Get started
+sidebar_label: Get started
+title: Documentation map
 ---
 
 import DocCardList from '@theme/DocCardList'; 
 import {findSidebarItem} from '@site/src/sidebarUtils';
 
-## Get started with Ronin
+## Learn about Ronin
 
-General overview of Ronin and its basic concepts.
+General information about the Ronin chain and a guide on buying RON.
 
 <DocCardList items={[ 
     findSidebarItem('/basics/introduction'),
@@ -22,7 +23,9 @@ General overview of Ronin and its basic concepts.
     findSidebarItem('/basics/roles'),
     ]} />
 
-## Use Ronin apps
+## Use Ronin dApps
+
+Guides on using Ronin dApps (decentralized apps). 
 
 <DocCardList items={[ 
     findSidebarItem('/apps/rns'),
@@ -35,8 +38,7 @@ General overview of Ronin and its basic concepts.
 
 ## Stake RON
 
-Use your RON tokens, purchase more RON, 
-delegate your stake and transfer it between validators.
+Stake your RON tokens to earn staking rewards, and manage your account.
 
 <DocCardList items={[ 
     findSidebarItem('/delegators/onboarding/become-delegator'),
@@ -72,15 +74,12 @@ Run a bridge operator node, propose and vote on changes to the bridge.
 
 ## Build on Ronin
 
-Looking to build and deploy your project on Ronin? The developer documentation
-is available on the
-[Sky Mavis developer documentation site](https://docs.skymavis.com/ronin/overview).
+To build and deploy your project on Ronin, visit [docs.skymavis.com](https://docs.skymavis.com/ronin/overview) for details.
 
 ## Get involved
 
 Stay informed with the latest Ronin news, events, and programs:
 
-* [Discord](https://discord.gg/P5GgF7SK)
-* [X](https://twitter.com/ronin_network)
-
-Sign up for [Ronin Newsletter](https://blog.roninchain.com).
+* Join our [Discord](https://discord.gg/P5GgF7SK) server
+* Follow us on [X](https://twitter.com/ronin_network)
+* Sign up for [Ronin Newsletter](https://blog.roninchain.com)
