fix: broken link

--- a/docs/apps/rns/guides/trade.mdx
+++ b/docs/apps/rns/guides/trade.mdx
@@ -93,4 +93,4 @@ For information about gifting an RNS name via the Ronin Gifting Portal, refer to
 
 ## See also
 
-* [Manage RNS names](manage.md)
+[Manage RNS names](manage.md)
