fix: wording in Trade RNS names

--- a/docs/apps/rns/guides/trade.mdx
+++ b/docs/apps/rns/guides/trade.mdx
@@ -56,7 +56,7 @@ Made an offer, but had second thoughts? You can cancel your offer anytime by cli
 
 To gift an RNS name, simply transfer it to the recipient's Ronin address using any of the following platforms: Ronin Wallet, Mavis Market, or the Ronin gifting portal. After the transfer is complete, the gifted RNS name will appear in the recipient's Ronin Wallet under the **Collectibles** tab.
 
-### Transfer an RNS name via Ronin Wallet {#gift-rns-ronin-wallet}
+### Transfer an RNS name in Ronin Wallet {#gift-rns-ronin-wallet}
 
 1. Open **Ronin Wallet**, select **Collectibles** (mobile app) or **NFTs** (browser extenstion), and then select **RNS**.
 
@@ -73,7 +73,7 @@ To gift an RNS name, simply transfer it to the recipient's Ronin address using a
    <img src={rwTransferRnsNameComplete} width={300} />
 4. Sign the transaction to complete the transfer.
 
-### Gift an RNS name via Mavis Market {#gift-rns-mavis-market}
+### Gift an RNS name in Mavis Market {#gift-rns-mavis-market}
 
 1. Go to [Mavis Market](https://marketplace.skymavis.com), click your name in the top right-hand corner, and then select **My Profile**.
    ![mm-gift-rns-start](../assets/trade/mm-gift-rns-start.png)
@@ -87,7 +87,7 @@ To gift an RNS name, simply transfer it to the recipient's Ronin address using a
    ![mm-gift-rns-name-complete](../assets/trade/mm-gift-rns-name-complete.png)
 5. Sign the transaction to complete the transfer.
 
-### Gift an RNS name via Ronin Gifting Portal
+### Gift an RNS name using Ronin Gifting Portal
 
 For information about gifting an RNS name via the Ronin Gifting Portal, refer to the **Send a gift** section in this [help article](https://support.roninchain.com/hc/en-us/articles/19451168526107-Ronin-Gifting-Portal).
 
