feat: add NFT withdrawal screenshot

--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -6,7 +6,7 @@ title: Get started
 import DocCardList from '@theme/DocCardList'; 
 import {findSidebarItem} from '@site/src/sidebarUtils';
 
-## Get started with Ronin
+## Basics
 
 General overview of Ronin and its basic concepts.
 
@@ -22,7 +22,7 @@ General overview of Ronin and its basic concepts.
     findSidebarItem('/basics/roles'),
     ]} />
 
-## Use Ronin apps
+## Use Ronin dApps
 
 <DocCardList items={[ 
     findSidebarItem('/apps/rns'),
@@ -75,12 +75,3 @@ Run a bridge operator node, propose and vote on changes to the bridge.
 Looking to build and deploy your project on Ronin? The developer documentation
 is available on the
 [Sky Mavis developer documentation site](https://docs.skymavis.com/ronin/overview).
-
-## Get involved
-
-Stay informed with the latest Ronin news, events, and programs:
-
-* [Discord](https://discord.gg/P5GgF7SK)
-* [X](https://twitter.com/ronin_network)
-
-Sign up for [Ronin Newsletter](https://blog.roninchain.com).
