--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -7,7 +7,7 @@ title: Documentation map
 import DocCardList from '@theme/DocCardList'; 
 import {findSidebarItem} from '@site/src/sidebarUtils';
 
-## Learn about Ronin
+## Basics
 
 General information about the Ronin chain and a guide on buying RON.
 
@@ -38,7 +38,7 @@ Guides on using Ronin dApps (decentralized apps).
 
 ## Stake RON
 
-Stake your RON tokens to earn staking rewards, and manage your account.
+Stake RON to earn staking rewards, manage your stake, track your validators.
 
 <DocCardList items={[ 
     findSidebarItem('/delegators/onboarding/become-delegator'),
@@ -74,12 +74,6 @@ Run a bridge operator node, propose and vote on changes to the bridge.
 
 ## Build on Ronin
 
-To build and deploy your project on Ronin, visit [docs.skymavis.com](https://docs.skymavis.com/ronin/overview) for details.
-
-## Get involved
-
-Stay informed with the latest Ronin news, events, and programs:
-
-* Join our [Discord](https://discord.gg/P5GgF7SK) server
-* Follow us on [X](https://twitter.com/ronin_network)
-* Sign up for [Ronin Newsletter](https://blog.roninchain.com)
+Looking to build and deploy your project on Ronin? The developer documentation
+is available on the
+[Sky Mavis developer documentation site](https://docs.skymavis.com/ronin/overview).
